@@ -9,6 +9,7 @@ Month day, 2007 - 3.10.1
 ! FreeImage now uses OpenJPEG 1.3.0
 + [Floris van den Berg] added multipage support to the PSD plugin (read only)
 + [Yves Schmid] added 48-bit RGB to 32-bit conversion support in FreeImage_ConvertTo32Bits
++ [Aaron Shumate] added RGB16-to-BITMAP and All-to-RGBF conversion support in FreeImage_ConvertToType
 * [Will Bryant] fixed makefile for MacOSX Tiger and Leopard
 * [Maria Gullickson] fixed a 'divide by 0' error in PNM plugin and FreeImage_Rescale function
 * [Yves Schmid] fixed a bug with Exif metadata reading in TIFF images
